--- a/views/layout/partials/nav.ejs
+++ b/views/layout/partials/nav.ejs
@@ -12,7 +12,7 @@
       </div>
       <div class="d-flex ml-auto">
         <a href="/login" class="btn btn-outline-light mx-2">Login</a>
-        <a href="/signup" class="btn btn-ultra-voilet">Sign Up</a>
+        <a href="/user/new" class="btn btn-ultra-voilet">Sign Up</a>
     </div>
     </div>
   </nav>
