--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,17 @@
-<%- include('layout/boilerplate') %>
+<% layout('layout/boilerplate') %>
 
-    <div style="height:90vh;" class="container d-flex justify-content-center mt-5">
-        <div class="d-flex flex-column align-items-center px-5 px-3-md">
-            <h1>Login</h1>
-
-            <% if (error_msg && error_msg.length> 0) { %>
-                <div style="color: red;">
-                    <%= error_msg[0] %>
-                </div>
-                <% } %>
-
-                    <form action="/login" method="POST">
-                        <label for="username">Username:</label>
-                        <input type="text" name="username" id="username" required>
-
-                        <label for="password">Password:</label>
-                        <input type="password" name="password" id="password" required>
-
-                        <button type="submit">Login</button>
-                    </form>
-        </div>
+<% if (messages.error && messages.error.length > 0) { %>
+    <div class="alert alert-error">
+        <%= messages.error[0] %>
     </div>
+<% } %>
+
+<form action="/login" method="POST">
+    <label>Email:</label>
+    <input type="email" name="email" required>
+
+    <label>Password:</label>
+    <input type="password" name="password" required>
+
+    <button type="submit">Login</button>
+</form>
