--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,18 @@ body {
     color: white;
     
 }
+/* glow words */
+
+.word {
+    transition: color 0.3s, text-shadow 0.3s;
+}
+
+.word.glow {
+    color: #ffcc00; /* Glowing yellow */
+    text-shadow: 0px 0px 10px #ffcc00;
+}
+
+
 
 .trans-inp {
     background: transparent;
