--- a/views/realtime2.ejs
+++ b/views/realtime2.ejs
@@ -5,7 +5,7 @@
 
         <!-- Scrollable text container -->
         <div id="scrollContainer" style="height: 40px; overflow-y: auto; border: 1px solid #ddd; padding: 10px; width: 90%;">
-            <p id="referenceText">Here will be the paragraph which needs to be spoken by the user and have the scroll as the sentences are said.Find poetry lesson plans, essays about teaching, a glossary of poetry terms </p>
+            <p id="referenceText">Here will be the paragraph which needs to be spoken by the user and have the scroll as the sentences are said.Find poetry lesson plan </p>
         </div>
 
         <div>
