--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -1,4 +1,12 @@
 <% layout('layout/boilerplate') %>
-<h1>CONGRATS!! Be Ready to begin a new Journey!!</h1>
-<p>ID: <%= typeof id %></p>
-<a href="/user/profile/<%=id%>">show profile</a>
+<div class="container">
+    <h1>CONGRATS!! Be Ready to begin a new Journey!!</h1>
+    <div class="container text-center">
+        <img style="height:50%;" src="/images/wizard.png" alt="">
+    </div>
+    <div class="container text-center">
+        <a href="/user/profile/<%=id%>">show profile</a>
+    </div>
+
+    
+</div>
