--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,61 +1,35 @@
 <% layout('layout/boilerplate') %>
-    
-    
-<div class="container d-flex flex-column">
+
+<div class="mt-2 mb-4 container d-flex flex-column">
     <div>
-        user: <%=user.username %>
-        
+        user: <%= user.username %>
     </div>
     <div>
-        gaurdian: <%= user.parent %>
-        
-        
+        guardian: <%= user.parent %>
     </div>
     <div>
-        email: <%= user.email  %>
-        
+        email: <%= user.email %>
     </div>
 </div>
+
 <div>
     <H2>LATEST LEVEL SCORES</H2>
-    <div class="container d-flex flex-row flex-wrap">
-        
-        <% for(let ch of user.chapters ){ %>
-            <div class="mx-4">
+    <div class="mt-3 mb-5 container d-flex flex-wrap justify-content-center">
 
-                <div class="mx-3"><%= ch.phoneme %>:<%= ch.currentAccur %></div>
-                <div>
-                    levels played: <%= ch.levels.length %>
+        <% for(let ch of user.chapters) { %>
+            <div class="mx-4 mb-4" style="background-color: #f8f9fa; padding: 15px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); width: 45%; text-align: center;">
+                <div class="mx-3" style="background-color: #007bff; color: white; padding: 10px; border-radius: 8px; margin-bottom: 10px; font-weight: bold;">
+                    <%= ch.phoneme %>: <%= ch.currentAccur %>
+                </div>
+                <div style="background-color: #28a745; color: white; padding: 10px; border-radius: 8px; font-weight: bold;">
+                    Levels played: <%= ch.levels.length %>
                 </div>
             </div>
         <% } %>
+
     </div>
-
 </div>
 
-<div>
-    <h2>initial assessment result:</h2>
-    <div>
-        <ul>
-            <% for(let key in avgPhonemeAccuracy  ){ %>
-            
-                <li><%= key %>:<%= avgPhonemeAccuracy[key]  %></li>
-            <% } %>
-        </ul>
-    </div>
-
-
+<div class="text-center container">
+    <button class="btn btn-ultra-voilet" onclick="window.location.href='/chapter/<%= user.username %>'">Enter The school of Wonders</button>
 </div>
-
-<div class="container d-flex">
-    <h2>CHAPTERS MADE: </h2>
-    <br>
-    <ul>
-
-        <% for(let ch of user.chapters ){ %>
-            <li><%= ch.phoneme %></li>
-        <% } %>
-    </ul>
-
-</div>
-
